styles/revengeMobile.css
@import "revenge.css";

body {
    background-image: url("../images/panel.jpg");
}

#wrapper {
    width: 100%;
    min-width: 300px;
    background-color: transparent;
    background-image: none;
    box-shadow: none;
    border-radius: 0;
}

@media only screen and (max-aspect-ratio: 1/1) {

    #wrapper {
        height: 100%;
        width: 95%;
        margin: auto;
        min-width: 0;
        padding: 0;
    }

    h1 {
        padding: 5px;
    }

    #menu-button {
        display: block;
        font-size: 2.25em;
        float: none;
        position: relative;
        text-align: center;
        background-color: rgba(0, 0, 0, 25%);
        width: fit-content;
        max-width: 10000000px;
        margin-left: auto;
        margin-right: auto;
        padding: 16px 16px;
        border-radius: 50px;
    }

    #menu-button a:link {
        color: #FFFF99;
    }

    #menu-button a:hover {
        color: #FFFF55;
    }

    #menu-button a:visited {
        color: #FFFF99;
    }

    nav {
        display: none;
        float: none;
        position: relative;
        text-align: center;
        background-color: rgba(0, 0, 0, 25%);
        width: auto;
        max-width: 10000000px;
        margin-left: auto;
        margin-right: auto;
        padding: 0 8px;
        border-radius: 8px;
    }

    nav ul {
        list-style-type: none;
        text-align: left;
        padding: 0;
        width: auto;
        max-width: 10000000px;
    }

    nav li {
        display: block;
        position: relative;
        text-align: center;
        list-style: none;
        padding: 1em 0;
        width: auto;
        max-width: 10000000px;
        font-size: 150%;
        border: 3px solid rgba(255, 255, 255, 0.25);
    }

    main {
        margin-left: auto;
        margin-right: auto;
        padding: 5px;
    }

    main ul {
        list-style-type: circle;
        text-align: left;
        padding: 0;
        width: auto;
        max-width: 10000000px;
    }

    p {
        padding: 15px;
        text-align: left;
    }

    #index-content {
        margin-right: 0;
        margin-left: 0;
    }

    #thumbnail {
        display: none;
        position: absolute;
    }

    #index-content {
        margin-right: 0;
    }

}

